<resources>
    <string name="app_name">TigerInTheWall</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="placeholder" translatable="false">Placeholder</string>
    <string name="please_wait">Please wait…</string>
    <string name="coming_soon">Coming Soon…?</string>

    <string name="status_card_click">There is nothing. Surprise!💩</string>
    <string name="status_card_unknown">Unknown status🤔</string>
    <string name="status_card_no_module">Module not installed💩</string>
    <string name="status_card_unknown_detail">Click here for details</string>
    <string name="status_card_exist">Activated🥳</string>
    <string name="status_card_exist_module">Installed Module Version: %s(%s)</string>
    <string name="status_card_exist_inject">Injection Interface:</string>
    <string name="status_card_exist_unknown" translatable="false">🤐</string>
    <string name="status_card_dialog_title">Unknown status</string>
    <string name="status_card_dialog_content">Unable to check module \"IFW Enhance TIW\" status, due to lack of permission.\n\nTigerInTheWall needs higher system permission to check module and do cleaning.\n\nMake sure you have full root permission, such as MagiskSU. Systems such as MIUI may have an incomplete built-in Root.</string>
    <string name="status_card_dialog_no_module_title">Module not installed</string>
    <string name="status_card_dialog_no_module_content">TigerInTheWall cannot find module \"IFW Enhance TIW\".\n\nUsually, nothing you do will work. Make sure you have install module correctly.\n\nFrom the new version, TigerInTheWall needs to use the modified module \"IFW Enhance TIW\" (not \"IFW Enhance\")</string>
    <string name="status_card_dialog_more">More</string>
    <string name="status_card_dialog_more_url">https://ic.into.icu/download/</string>

    <string name="manager_clean_title">App Cleaner</string>
    <string name="manager_clean_detail">Clean sh*t</string>
    <string name="manager_quick_clean_title">Quick Clean</string>
    <string name="manager_quick_clean_detail">Cloud Clean Rules</string>
    <string name="manager_quick_clean_author">Author: %s</string>
    <string name="manager_quick_clean_update_at">Update At %s</string>
    <string name="manager_quick_clean_upload_at">Upload At %s</string>
    <string name="net_url_error">Failed to request rule list. If you use a custom repository, check whether the url is correct</string>

    <string name="manager_clean_type_send">Share</string>
    <string name="manager_clean_type_send_multi">Share Multi</string>
    <string name="manager_clean_type_view">Open With</string>
    <string name="manager_clean_type_text">Press Text</string>
    <string name="manager_clean_type_browser">Browser</string>
    <string name="manager_clean_type_browser_http" translatable="false">HTTP/HTTPS</string>
    <string name="manager_search">Search</string>

    <string name="manager_clean_detail_title">App Detail</string>
    <string name="manager_clean_detail_version">Version v%s(%s)</string>
    <string name="manager_clean_detail_output">Output Rules</string>
    <string name="manager_clean_system_warning_title">WARNING</string>
    <string name="manager_clean_system_warning_detail">This is a system application. Cleaning it MAY cause serious consequences, please think carefully.</string>

    <string name="manager_clean_detail_clean">Clean</string>
    <string name="manager_clean_detail_select_all">Select All</string>
    <string name="manager_clean_detail_select_none">Deselect all</string>
    <string name="manager_clean_detail_advanced">Advanced</string>
    <string name="manage_apply_success">Clean Finished</string>


    <string name="misc_list_title">Other</string>
    <string name="misc_backup_and_restore_title">Backup &amp; Restore</string>
    <string name="misc_setting_title">Settings</string>
    <string name="misc_about_title">About</string>
    <string name="misc_title">Miscellaneous</string>

    <string name="misc_backup_and_restore_backup">Backup</string>
    <string name="misc_backup_and_restore_restore">Restore</string>
    <string name="misc_backup_and_restore_msg">Create a backup profile for the TigerInTheWall, including intent cleanup entries and settings. \n The restore function is compatible with the "RnIntentClean" files.</string>
    <string name="misc_backup_and_restore_backup_ok">Backup completed</string>
    <string name="misc_backup_and_restore_error">An error occurred when backup</string>
    <string name="misc_backup_and_restore_restore_ok">Restore completed</string>


    <string name="setting_function">Function</string>
    <string name="setting_blacklist">Blacklist Mode</string>
    <string name="setting_blacklist_summary">Now in Blacklist mode. Selected activity will be cleaned and never show up in the intent list.</string>
    <string name="setting_blacklist_summary_no">Now in Whitelist mode. Only selected activity will be kept and show up in the intent list.</string>
    <string name="setting_system_app">Show System Apps</string>
    <string name="setting_system_app_summary">Show System Apps. Disable system apps intent may cause unknown errors.</string>
    <string name="setting_system_app_summary_no">Don\'t show System Apps. But the clean you applied before won\'t go away.</string>
    <string name="setting_disable_direct">Disable "Direct Share"</string>
    <string name="setting_disable_direct_summary">Disable "Direct Share" of unmodified Sharesheet. Cannot disable "Direct Share" on Android 10+ devices.</string>
    <string name="setting_disable_direct_summary_no">Enable "Direct Share" of unmodified Sharesheet. Cannot disable "Direct Share" on Android 10+ devices.</string>

    <string name="setting_network">Network</string>
    <string name="setting_rules_mirror">Rules Mirrors</string>
    <string name="setting_rules_mirror_summary">If your connection to Github is not good, you can try switching mirrors. Current use: %s</string>
    <string name="setting_rules_mirror_custom">Custom</string>
    <string name="setting_rules_mirror_custom_repo">Custom Rule Repository</string>

    <string name="setting_troubleshooting">Troubleshooting</string>
    <string name="setting_reset_success">Reset success</string>
    <string name="setting_reset_error">Reset failed</string>
    <string name="setting_reset_ifw">Reset IFW files</string>
    <string name="setting_reset_ifw_summary">This will delete all TigerInTheWall created IFW files(others won\'t be affected). It won\'t clear your configuration.</string>
    <string name="setting_reset_configuration">Reset configuration</string>
    <string name="setting_reset_configuration_summary">This will clear TigerInTheWall\'s configuration, make sure you have a good backup.</string>
    <string name="setting_reset_secondary_confirmation">Secondary confirmation</string>
    <string name="setting_reset_secondary_confirmation_summary">This action is irrevocable. Only do this if there is a problem with TigerInTheWall</string>

    <string name="about_page_info">Introduction</string>
    <string name="about_page_info_desc">Are you tired of scouring through long lists of apps when sharing pictures or open a file just to find a few apps that you use a lot?\n\nWhy you app occupy my sheet?? If I needed you, I\'d open the app myself to use it!\n\nTigerInTheWall is an App that allow you to clean up your sheets, just like sharesheet, open mode sheet and more!\n\nWorks with the Magisk modules Riru - Core and Riru - IFWEnhance, and root permission.</string>
    <string name="about_page_dev">Developers</string>
    <string name="about_page_dev_1">TigerInTheWall Developers</string>
    <string name="about_page_dev_2">Riru - Core Developers</string>
    <string name="about_page_dev_3">Riru - IFWEnhance Developers</string>
    <string name="about_page_open_source">Open Source Licenses</string>

    <string name="manage_start">The IFW rules written by this application have been cleared. Please submit again to take effect.</string>

    <string name="misc_disable">Disable</string>
    <string name="misc_disable_direct">Disable Direct Share</string>
    <string name="misc_disable_direct_msg">Disable Direct Share in the unmodified Android Sharesheet. This is not available on Android 10+ devices.</string>
    <string name="misc_disable_direct_msgNo">Enable Direct Share in the unmodified Android Sharesheet. This is not available on Android 10+ devices.</string>
    <string name="misc_disable_direct_No">This is not available on Android 10+ devices.</string>
    <string name="misc_disable_direct_toastEnable">Direct Share has been enabled</string>
    <string name="misc_disable_direct_toastDisable">Direct Share has been disabled</string>

    <string name="dialog_positive">Got it</string>

    <string name="menu_select_all">Select all</string>
    <string name="menu_clear">Unselect All</string>
    <string name="fab_submit">Apply Clean</string>


    <string-array name="entry_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>
