<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CleanManagerActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="?android:attr/colorBackground"
        app:layout_constraintBottom_toTopOf="@id/manager_clean_chip_scroll_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout

            style="?attr/collapsingToolbarLayoutLargeStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
            app:contentScrim="?attr/colorSecondary"
            app:collapsedTitleTextColor="?attr/colorOnBackground"
            app:expandedTitleTextColor="?attr/colorOnBackground"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                app:layout_collapseMode="pin"
                app:menu="@menu/manager_intent_bar"
                app:navigationIcon="@drawable/ic_twotone_arrow_back_24"
                app:title="@string/manager_clean_title" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <HorizontalScrollView
                android:id="@+id/manager_clean_chip_scroll_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                app:layout_constraintBottom_toTopOf="@id/manager_clean_state_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/manager_clean_chip_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    app:singleLine="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/manager_clean_chip_share"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/manager_clean_type_send"
                        app:checkedIcon="@drawable/ic_twotone_share_24"
                        app:background="@android:color/transparent"
                        app:chipBackgroundColor="@color/bg_chip_state_list" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/manager_clean_chip_view"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/manager_clean_type_view"
                        app:checkedIcon="@drawable/ic_twotone_file_open_24"
                        app:background="@android:color/transparent"
                        app:chipBackgroundColor="@color/bg_chip_state_list" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/manager_clean_chip_text"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/manager_clean_type_text"
                        app:checkedIcon="@drawable/ic_twotone_text_fields_24"
                        app:background="@android:color/transparent"
                        app:chipBackgroundColor="@color/bg_chip_state_list" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/manager_clean_chip_browser"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/manager_clean_type_browser"
                        app:checkedIcon="@drawable/ic_twotone_public_24"
                        app:background="@android:color/transparent"
                        app:chipBackgroundColor="@color/bg_chip_state_list" />
                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>

            <com.drake.statelayout.StateLayout
                android:id="@+id/manager_clean_state_layout"
                app:loading_layout="@layout/layout_loading"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/manager_clean_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.drake.statelayout.StateLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>