<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activity.CleanManagerActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toTopOf="@id/manager_clean_chip_scroll_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="?attr/collapsingToolbarLayoutLargeStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
            android:background="@color/colorBackground"
            app:contentScrim="@color/colorBackgroundLittleDarker"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                app:layout_collapseMode="pin"
                app:menu="@menu/manager_intent_bar"
                app:navigationIcon="@drawable/ic_twotone_arrow_back_24"
                app:title="@string/manager_clean_detail_title" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/app_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:paddingStart="20dp"
                android:paddingTop="12dp"
                android:paddingEnd="20dp"
                android:paddingBottom="12dp">

                <ImageView
                    android:id="@+id/app_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/app_icon"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="5dp"
                        android:ellipsize="middle"
                        android:singleLine="true"
                        android:text="@string/app_name"
                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                        android:textSize="18sp"
                        app:layout_constrainedWidth="true"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintHorizontal_chainStyle="packed" />

                    <TextView
                        android:id="@+id/app_package_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="middle"
                        android:singleLine="true"
                        android:text="@string/app_name"
                        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:gravity="center"
                        android:paddingBottom="2dp">

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:src="@drawable/ic_twotone_info_24" />

                        <TextView
                            android:id="@+id/app_version_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="middle"
                            android:includeFontPadding="false"
                            android:singleLine="true"
                            android:text="@string/app_name"
                            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                            android:textSize="14sp" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_system_app_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="12dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorSystemAppWarningBackground"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_twotone_warning_24" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/manager_clean_system_warning_title"
                            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/manager_clean_system_warning_detail"
                            android:textAppearance="@style/TextAppearance.Material3.TitleSmall" />
                    </LinearLayout>
                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/filledButton"
                    style="@style/Widget.Material3.Button.TonalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="选中全部"
                    app:backgroundTint="@color/colorPrimaryTwenty"
                    app:icon="@drawable/ic_twotone_select_all_24" />

<!--                <com.google.android.material.button.MaterialButton-->
<!--                    android:id="@+id/filledButton2"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="10dp"-->
<!--                    android:text="选中全部"-->
<!--                    app:backgroundTint="@color/colorPrimarySixty"-->
<!--                    app:icon="@drawable/ic_twotone_select_all_24" />-->
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="24dp"
                app:layoutManager="com.drake.brv.layoutmanager.HoverLinearLayoutManager" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>